<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@drawable/lightpurple"
    android:gravity="top|center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        style="@android:style/TextAppearance.Material.Headline"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:padding="30dp"
        android:text="@string/bmi_calculator"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/height"
            style="@android:style/TextAppearance.Material.Body1"/>

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heightPicker"
            android:layout_marginHorizontal="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cm"
            style="@android:style/TextAppearance.Material.Body1"/>

        <TextView
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/weight"
            style="@android:style/TextAppearance.Material.Body1"/>

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weightPicker"
            android:layout_marginHorizontal="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg"
            style="@android:style/TextAppearance.Material.Body1"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resultsTV"
        android:padding="10dp"
        style="@android:style/TextAppearance.Material.Headline" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/healthyTV"
        android:padding="10dp"
        style="@android:style/TextAppearance.Material.Headline" />


</LinearLayout>